# gal

./: .gitignore  Cargo.toml  README.md  WEBGAL_PRD.zh-CN.md  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
design/: README.md  index.html  package-lock.json  package.json  vite.config.ts
design/src/app/: App.tsx  routes.tsx
design/src/app/components/: AiSettingsDialog.tsx  AppSettingsDialog.tsx  AssetManager.tsx  DetailPanel.tsx  FlowCanvas.tsx  NodePanel.tsx  PreviewOverlay.tsx  ProjectHome.tsx  StoryEditor.tsx
design/src/app/lib/: ai-ipc.ts  assets-ipc.ts  webgal-ipc.ts  webgal-types.ts
design/src/styles/: animations.css  fonts.css  theme.css
src/: main.rs  models.rs  project_home.rs  story_editor.rs  workspace.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/ai/: commands.rs  config.rs
src-tauri/src/assets/: commands.rs
src-tauri/src/webgal/: commands.rs  mod.rs  parser.rs  project.rs  serializer.rs  types.rs
