[package]
name = "gal"
version = "0.1.0"
description = "A Tauri desktop shell for the gal editor"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
